# tur

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/: .release-please-manifest.json  release-please-config.json  tur-logo.free
.github/workflows/: ci.yml  github-pages.yml  release.yml
examples/: README.md  binary-addition.tur  binary-counter.tur  busy-beaver-3.tur  even-zeros-and-ones.tur  event-number-checker.tur  multi-tape-addition.tur  multi-tape-compare.tur  multi-tape-copy.tur  multi-tape-example.tur  palindrome.tur  subtraction.tur
src/: analyzer.rs  encoder.rs  grammar.pest  lib.rs  loader.rs  machine.rs  parser.rs  programs.rs  types.rs
